# pizza-delivery

./: .gitignore
backend/: database.py  database_tests.py  main.py  models.py  pizza.db  pyproject.toml  sql_to_excel.py  utils.py
backend/crud/: customer.py  order.py  pizza.py
backend/db/: database.py  pizza.db
frontend/: index.html  package-lock.json
frontend/src/: App.css  App.jsx  Auth.css  Auth.jsx  main.jsx
frontend/src/components/: Auth.jsx  Cart.jsx  Checkout.jsx  OrdersList.jsx  PersonalAccount.jsx  Pizza.jsx
frontend/src/hooks/: useCart.js
frontend/src/models/: PizzaToppings.js
frontend/src/store/: index.js
frontend/src/store/slices/: cartSlice.js
frontend/src/styles/: App.css  Auth.css  Cart.css  Checkout.css  Modal.css  Order.css  OrdersList.css  PersonalAccount.css  Pizza.css
